# sc_testing

./: .gitignore  Cargo.toml  README.md
.github/workflows/: actions.yaml
contracts/: generate_test_report.sh
contracts/lottery-esdt/: Cargo.toml  sc-config.toml
contracts/lottery-esdt/interactor/: Cargo.toml  state.toml
contracts/lottery-esdt/interactor/src/: interactor_main.rs  proxy.rs
contracts/lottery-esdt/meta/: Cargo.toml
contracts/lottery-esdt/scenarios/: buy-after-deadline.scen.json  buy-after-sold-out.scen.json  buy-after-winner-announced.scen.json  buy-all-tickets-and-determine-winner.scen.json  buy-all-tickets-and-exceed-max-tickets.scen.json  buy-not-whitelisted.scen.json  buy-wrong-fee.scen.json  determine-winner-early.scen.json  init-lottery-esdt.scen.json  start-lottery-twice.scen.json  wrong-start-params.scen.json
contracts/lottery-esdt/src/: lottery.rs
contracts/lottery-esdt/tests/: lottery_esdt_blackbox.rs  lottery_esdt_scenario_go_test.rs  lottery_esdt_scenario_rs_test.rs  proxy.rs
contracts/lottery-esdt/wasm/: Cargo.toml
contracts/nft-escrow/: Cargo.toml
contracts/nft-escrow/interactor/: Cargo.toml  state.toml
contracts/nft-escrow/meta/: Cargo.toml
contracts/nft-escrow/output/: nft-escrow.abi.json  nft-escrow.imports.json  nft-escrow.mxsc.json  nft-escrow.wasm
contracts/nft-escrow/src/: lib.rs
contracts/nft-escrow/tests/: nft-escrow_blackbox.rs  proxy.rs
contracts/nft-escrow/wasm/: Cargo.toml
contracts/potlock/: Cargo.toml  sc-config.toml
contracts/potlock/interact-rs/: config.toml  state.toml
contracts/potlock/meta/: Cargo.toml
contracts/potlock/output/: potlock.abi.json  potlock.wasm  (+3 more)
contracts/update-attributes-sc/: Cargo.toml
contracts/update-attributes-sc/interact-rs/: .gitignore  Cargo.toml  output.txt  run_tests_with_regex.sh  state.toml
contracts/update-attributes-sc/interact-rs/src/: interactor_main.rs
contracts/update-attributes-sc/meta/: Cargo.toml
contracts/update-attributes-sc/meta/src/: main.rs
contracts/update-attributes-sc/output/: proxy.rs  update-attributes.abi.json  update-attributes.imports.json  update-attributes.mxsc.json  update-attributes.wasm
contracts/update-attributes-sc/src/: custom_callbacks.rs  storage.rs  update_attributes.rs
contracts/update-attributes-sc/tests/: proxy.rs  update_attributes_blackbox.rs
contracts/update-attributes-sc/wasm/: Cargo.toml
contracts/update-attributes-sc/wasm/src/: lib.rs
interact-rs/: state.toml
interact-rs/src/: potlock_interactor_main.rs
(+29 files in other folders)
