[workspace]
resolver = "2"

members = [
    "contracts/lottery-esdt",
    "contracts/lottery-esdt/meta",
    "contracts/lottery-esdt/interactor",
    "contracts/potlock",
    "contracts/potlock/meta",
    "contracts/potlock/interact-rs",
    "contracts/nft-escrow",
    "contracts/nft-escrow/meta",
    "contracts/nft-escrow/interactor",
    "contracts/update-attributes-sc",
    "contracts/update-attributes-sc/meta",
    "contracts/update-attributes-sc/interact-rs",
]