[package]
name = "update-attributes"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/update_attributes.rs"

[dependencies.multiversx-sc]
version = "0.52.3"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.52.3"

[dependencies.multiversx-sc-modules]
version = "0.52.3"

# [workspace]
# members = [".", "meta", "interact-rs"]
