[package]
name = "rust-interact-update-attributes-sc"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[[bin]]
name = "rust-interact-update-attributes-sc"
path = "src/interactor_main.rs"

[dependencies.update-attributes]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.52.3"

[dependencies.multiversx-sc]
version = "0.52.3"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"

# [workspace]

